# miniNginx

./: .gitignore  CMakeLists.txt  README.md  common.mk  config.mk  makefile  nginx.conf
.VSCodeCounter/2024-01-16_18-34-57/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
4test/: .gdb_history  a.out  endiantest.cpp  ngx_server.cpp  server.cpp  test1.cpp
4test/5.6/: .gdb_history  common.mk  nginx  nginx.conf
4test/5.6/_include/: ngx_func.h
4test/5.6/app/: makefile
4test/5.6/app/dep/: nginx.d  ngx_c_conf.d  ngx_c_socket.d  ngx_c_socket_accept.d  ngx_c_socket_conn.d  ngx_c_socket_inet.d  ngx_c_socket_request.d  ngx_daemon.d  ngx_event.d  ngx_log.d  ngx_printf.d  ngx_process_cycle.d  ngx_setproctitle.d  ngx_signal.d  ngx_string.d
4test/5.6/net/: ngx_c_socket_accept.cxx
4test/5.6/proc/: ngx_process_cycle.cxx
_include/: ngx_c_conf.h  ngx_comm.h  ngx_func.h  ngx_global.h  ngx_lockmutex.h  ngx_marco.h  ngx_memory.h  ngx_signal.h  ngx_socket.h  ngx_threadpool.h
app/: miniNginx.cpp  ngx_c_conf.cpp  ngx_log.cpp  ngx_printf.cpp  ngx_setproctitle.cpp  ngx_string.cpp
app/dep/: miniNginx.d  ngx_c_conf.d  ngx_setproctitle.d  ngx_signal.d  ngx_string.d
misc/: ngx_c_memory.cpp  ngx_threadpool.cpp
net/: ngx_socket.cpp  ngx_socket_accept.cpp  ngx_socket_conn.cpp  ngx_socket_inet.cpp  ngx_socket_request.cpp
proc/: ngx_daemon.cpp  ngx_event.cpp  ngx_process_cycle.cpp
signal/: makefile  ngx_signal.cpp
